question 2 & 3
